# Sho

./: Cargo.toml  README.md
.github/workflows/: release.yaml
etc/: art.txt  setup.sh
src/: api.rs  main.rs  utils.rs
