[package]
name = "shio"
version = "0.2.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
nucleo-matcher = "0.3.1"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tui-input = "0.15.0"
ureq = { version = "3.1.2", features = ["json"] }
