[package]
name = "sho"
version = "0.2.2"
edition = "2024"
description = "blazingly fast TUI anime browser"
license = "GPL-2.0"
repository = "https://github.com/Scapy47/sho"
readme = "README.md"
keywords = ["cli", "tool"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
image = "0.25.10"
nucleo-matcher = "0.3.1"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.6", default-features = false, features = ["image-defaults", "crossterm"] }
ratatui-macros = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tui-input = "0.15.0"
ureq = { version = "3.1.2", features = ["json"] }
